Added xcompmgr at startup (eyecandy)

--- a/.i3/config.3
+++ b/.i3/config.3
@@ -1,5 +1,5 @@
-#######################################################################################
-# Last review            Mon 17 May 2010 02:12:56 AM CDT
+# #####################################################################################
+# Last review            Mon 20 Feb 2012 02:30:05 AM CST
 # #####################################################################################
 #  vim: set ts=8 sw=4 tw=0 ft=conf : 
 #  TODO 02-03-2011 09:57 => xbindkeys
@@ -34,6 +34,8 @@
 
 # This configuration uses Mod1 and Mod3. Make sure they are mapped properly using xev(1)
 # and xmodmap(1). Usually, Mod1 is Alt (Alt_L) and Mod3 is Windows (Super_L)
+
+
 
 # Mod4 is <Win> and Mod1 is <Alt>
 set $Win Mod4
