random changes, $PS1 that rocks, email changes

--- a/.i3/config.3
+++ b/.i3/config.3
@@ -63,7 +63,7 @@ workspace 6 fm
 workspace 7 work
 workspace 8 news
 workspace 9 work
-workspace 10 work
+workspace 10 todo
 workspace 11 work
 workspace 12 work
 workspace 13 work
@@ -163,7 +163,7 @@ bindsym $Win+Shift+Down mj
 bindsym $Win+Shift+Up mk
 bindsym $Win+Shift+Right ml
 
-# Move Container (Mod3+Shift+h/j/k/l)
+# Move Container ($Alt+$Win+Shift+h/j/k/l)
 bind $Alt+$Win+Shift+43 wcmh
 bind $Alt+$Win+Shift+44 wcmj
 bind $Alt+$Win+Shift+45 wcmk
