--- a/.i3/config.3
+++ b/.i3/config.3
@@ -229,7 +229,7 @@ bindsym Control+Shift+g exec /usr/bin/x-terminal-emulator
 #bindsym Control+Shift+g exec /usr/bin/urxvtc
 
 # Control+Shift*f starts firefox
-#bind Control+Shift+41 exec /usr/bin/firefox
+#bind Control+Shift+41 exec firefox
 
 # Control+Shift+k kills the current client
 bind Control+Shift+45 kill
@@ -249,13 +249,13 @@ bind $Alt+9 exec dmenu_run -p ">" -i -nb \#000000 -nf \#FFFFFF -sb \#000000 -sf 
 #bind Control+$Alt+27 restart
 
 # Control+$Alt+l lock session
-bind Control+$Alt+46 exec gnome-screensaver-command --lock
+bind Control+$Alt+46 exec i3lock -i $HOME/data/images/wallpapers/1.png -p win -n
 
 # Control+$Alt+Supr starts a dmenu session menu
 bind Control+$Alt+119 exec dmenu_session
 
 # Toggle windows transparency
-bindsym Control+Shift+t exec transset-df -p
+bindsym Control+Shift+t exec transset -p
 
 # magnifier: Control+Shift+m
 bindsym Control+Shift+m exec magnifier
@@ -302,17 +302,17 @@ mode "resize" {
         # when pressing left, the window is resized so that it has
         # more space on its left
 
-        bindsym n resize left -10
-        bindsym Shift+n resize left +10
+        bindsym h resize left -10
+        bindsym Shift+h resize left +10
 
-        bindsym r resize bottom +10
-        bindsym Shift+r resize bottom -10
+        bindsym j resize bottom +10
+        bindsym Shift+j resize bottom -10
 
-        bindsym t resize top -10
-        bindsym Shift+t resize top +10
+        bindsym k resize top -10
+        bindsym Shift+k resize top +10
 
-        bindsym d resize right +10
-        bindsym Shift+d resize right -10
+        bindsym l resize right +10
+        bindsym Shift+l resize right -10
         
         #Exit resize mode
         bindsym $Win+Shift+z mode default
@@ -376,20 +376,20 @@ assign "workrave"        20
 #bar.urgent             #d11931         #d11931         #ffffff
 
 # gentoo
-client.focused         #7a5ada         #7a5ada         #ffffff
-client.focused_inactive        #45347b         #45347b         #ffffff
-client.unfocused       #333333         #333333         #ffffff
-client.urgent          #D11931         #D11931         #ffffff
-bar.focused            #45347b         #45347b         #ffffff
-bar.unfocused          #dddaec         #dddaec         #45347b
-bar.urgent             #d11931         #d11931         #ffffff
+#client.focused         #7a5ada         #7a5ada         #ffffff
+#client.focused_inactive        #45347b         #45347b         #ffffff
+#client.unfocused       #333333         #333333         #ffffff
+#client.urgent          #D11931         #D11931         #ffffff
+#bar.focused            #45347b         #45347b         #ffffff
+#bar.unfocused          #dddaec         #dddaec         #45347b
+#bar.urgent             #d11931         #d11931         #ffffff
 
 # dark
-#client.focused            #999999      #999999      #000000
-#client.focused_inactive   #333333      #333333      #999999
-#client.unfocused          #333333      #333333      #999999
-#client.urgent             #8C4665      #8C5665      #999999
-#bar.focused               #999999      #000000      #999999
-#bar.unfocused             #333333      #000000      #999999
-#bar.urgent                #8C4665      #000000      #999999
-#bar.urgent             #d11931         #000000         #999999
+client.focused            #999999      #999999      #000000
+client.focused_inactive   #333333      #333333      #999999
+client.unfocused          #333333      #333333      #999999
+client.urgent             #8C4665      #8C5665      #999999
+bar.focused               #999999      #000000      #999999
+bar.unfocused             #333333      #000000      #999999
+bar.urgent                #8C4665      #000000      #999999
+bar.urgent             #d11931         #000000         #999999
