--- a/.i3/config.3
+++ b/.i3/config.3
@@ -266,7 +266,8 @@ bindsym Control+Shift+i exec /usr/bin/x-terminal-emulator -e irssi
 #bindsym Control+Shift+i exec /bin/sh -c irssi
 
 # pms: Control+Shift+p
-bindsym Control+Shift+p exec /usr/bin/x-terminal-emulator -e pms
+#bindsym Control+Shift+p exec /usr/bin/x-terminal-emulator -e pms
+bindsym Control+Shift+p exec /usr/bin/x-terminal-emulator -e ncmpcpp
 #bindsym Control+Shift+p exec sh -c pms
 
 # alsamixer: Control+Shift+a
