wcd, i3/wicd, irssi/channel changes
        .alias.linux:
            remove /etc & /opt of the wcd lists
        .i3/config.3
            added shortcut for wicd-curses / Altgr+w
        .irssi/config
            added channel of ubuntu-community / fn

--- a/.i3/config.3
+++ b/.i3/config.3
@@ -274,6 +274,9 @@ bindsym $Altgr+i exec /usr/bin/x-terminal-emulator -title "irssi" -e irssi
 bindsym $Altgr+r exec /usr/bin/x-terminal-emulator -e ncmpcpp
 #bindsym Control+Shift+p exec sh -c pms
 
+# wicd-curses: Altgr+w
+bindsym $Altgr+w exec /usr/bin/x-terminal-emulator -e wicd-curses
+
 # alsamixer: Control+Shift+a
 #bindsym Control+Shift+a exec /usr/bin/x-terminal-emulator -e alsamixer
 #bindsym Control+Shift+a exec /bin/sh -c alsamixer
